--- a/kanban/package.json
+++ b/kanban/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-addons-update": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "whatwg-fetch": "^0.11.0"
   }
 }
